--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -25,7 +25,7 @@
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
-                name="scan-outline"
+                name="flash-outline"
                 role="img"
               />
             </div><p
@@ -43,7 +43,7 @@
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
-                name="scan-outline"
+                name="hammer-outline"
                 role="img"
               />
             </div><p
@@ -60,7 +60,7 @@
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
-                name="scan-outline"
+                name="rocket-outline"
                 role="img"
               />
             </div><p
