--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -28,7 +28,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="calendar-outline"
                     role="img"
                   />
                 </div><p
@@ -46,7 +46,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="megaphone-outline"
                     role="img"
                   />
                 </div><p
@@ -64,7 +64,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="qr-code-outline"
                     role="img"
                   />
                 </div><p
@@ -82,7 +82,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="speedometer-outline"
                     role="img"
                   />
                 </div><p
@@ -100,7 +100,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="people-outline"
                     role="img"
                   />
                 </div><p
@@ -118,7 +118,7 @@
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
-                    name="scan-outline"
+                    name="accessibility-outline"
                     role="img"
                   />
                 </div><p
