--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -33,7 +33,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="../../../public/testimonials/agathe.jpg"
+                    src="/public/testimonials/agathe.jpg"
                     width="56"
                     height="56"
                     decoding="async"
@@ -105,7 +105,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="../../../public/testimonials/barbara.jpg"
+                    src="/testimonials/barbara.jpg"
                     width="56"
                     height="56"
                     decoding="async"
