--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -47,7 +47,7 @@
         <img
           alt=""
           class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
-          src="../../../public/degass_home.JPG"
+          src="/degass_home.JPG"
         />
       </div>
     </div>
