--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -5,10 +5,10 @@
       <div class="max-w-2xl">
         <p
           class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
-          Frequent questions and answers
+          Questions fréquentes
         </p>
         <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-          Because we wonder all day around
+          Contactez moi pour plus de détails
         </p>
       </div>
       <div class="mt-12 space-y-12 divide-y-2">
@@ -16,19 +16,12 @@
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
               class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
-              Lexingtøn Themes identified users on my account as unauthorized.
-              What should I do?
+              Quels sont les types d'événements que je peux organiser avec Degass ?
             </span>
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              If we got in touch with you about unauthorized charges and you
-              think we have made a mistake, we will gladly look into this for
-              you. We will have sent you a form that we need you to fill out in
-              order for Lexingtøn Themes to revisit your account. Please fill
-              out the verification form that was sent to you. Once you have
-              completed the verification, we will revisit your account and
-              follow up with you.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
             </p>
           </div>
         </div>
@@ -36,26 +29,15 @@
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
               class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
-              I recently received a request for my photo ID. Why does Lexingtøn
-              Themes UI need this? What should I do next?
+              Je suis interessé par Degass, comment se passe l'Installation au sein de mon école ?
             </span>
           </div>
           <div class="space-y-4 lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Lexingtøn Themes is legally required to complete what is called a
-              KYC (Know Your Customer) Survey for every user that signs up,
-              which includes completing identity verification for the person who
-              chooses to be the owner, administrator, and representative of a
-              Lexingtøn Themes account. These requirements are intended to
-              promote transparency and prevent individuals from using complex
-              company structures to hide terrorist financing, money laundering,
-              tax evasion, and other financial crimes. Usually, we are able to
-              verify our users' identities automatically, but once in a while we
-              are unable to and have to reach out for more information.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
             </p>
             <p class="text-slate-500 text-sm">
-              If you have not yet done so, visit the Verifications section of
-              your Dashboard to upload your photo ID in your dashboard.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. 
             </p>
           </div>
         </div>
@@ -63,21 +45,12 @@
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
               class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
-              Why has Lexingtøn Themes placed a reserve on my new account?
+              Les données des étudiants sont-elles protégés ?
             </span>
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Reserves are utilized to keep processing volume available within
-              your Lexingtøn Themes account to fund refunds or chargebacks.
-              There are several possible reasons a reserve may be placed at
-              onboarding. It could be that your business operates in an industry
-              or with a business model that potentially creates additional
-              credit risk, even if you are not yet receiving chargebacks. Some
-              businesses may also collect payment far in advance, creating
-              additional risk. Most reserves are temporary, however, and we are
-              happy to revisit if you provide additional information by replying
-              to the notification email you received.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
             </p>
           </div>
         </div>
@@ -85,19 +58,12 @@
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
               class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
-              I just opened a new account but Lexingtøn Themes told me I cannot
-              process payments yet.
+              Une autre question ?
             </span>
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              We know how important it is to be able to accept transactions and
-              payouts quickly in order for a business to continue running
-              smoothly. Lexingtøn Themes is currently reviewing your submitted
-              details so that we have a full understanding of your business.
-              Unless we have requested more information, there is no action for
-              you to take, and we will do our best to wrap our routine review up
-              so you can get up and running.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
             </p>
           </div>
         </div>
