--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -8,7 +8,7 @@
           <img
             width="50"
             height="49"
-            src="../../../public/degass_logo.png"
+            src="/degass_logo.png"
           />
           <span class="font-bold font-display">Degass</span>
         </a>
