--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -33,7 +33,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="/public/testimonials/agathe.jpg"
+                    src="/testimonials/agathe.jpg"
                     width="56"
                     height="56"
                     decoding="async"
@@ -175,7 +175,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="../../../public/testimonials/erwan.jpg"
+                    src="/testimonials/erwan.jpg"
                     width="56"
                     height="56"
                     decoding="async"
