--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,4 +1,4 @@
-<footer aria-labelledby="footer-heading" class="bg-black ">
+<footer aria-labelledby="footer-heading" class="bg-black">
   <h2 id="footer-heading " class="sr-only">Footer</h2>
   <div
     class="items-center px-8 mx-auto py-12 gh:py-24 md:px-12 lg:px-16 xl:px-36 2xl:max-w-7xl">
@@ -63,13 +63,6 @@
             <ul role="list" class="mt-4 space-y-2">
               <li>
                 <a
-                  href="https://www.unwrapped.design"
-                  class="text-sm text-slate-400 hover:text-white">
-                  Unwrapped
-                </a>
-              </li>
-              <li>
-                <a
                   href="https://github.com/michael-andreuzza/astrosaas"
                   class="text-sm text-slate-400 hover:text-white">
                   GitHub repo
@@ -96,23 +89,23 @@
             <ul role="list" class="mt-4 space-y-2">
               <li>
                 <a
-                  href="https://twitter.com/unwrappedHQ"
+                  href="https://x.com/lexingtonthemes"
                   class="text-sm text-slate-400 hover:text-white">
-                  @unwrappedHQ
+                  @lexingtonthemes
                 </a>
               </li>
               <li>
                 <a
-                  href="https://twitter.com/Mike_Andreuzza"
+                  href="https://x.com/Mike_Andreuzza"
                   class="text-sm text-slate-400 hover:text-white">
                   @Mike_Andreuzza
                 </a>
               </li>
               <li>
                 <a
-                  href="https://dribbble.com/MichaelAndreuzza.html"
+                  href="https://michaelandreuzza.com"
                   class="text-sm text-slate-400 hover:text-white">
-                  Dribbble
+                  MichaelAndreuzza
                 </a>
               </li>
             </ul>
@@ -128,7 +121,7 @@
     <div class="md:flex md:items-center md:justify-between">
       <div class="flex justify-center space-x-6 md:order-2">
         <a
-          href="https://twitter.com/mike_andreuzza"
+          href="https://x.com/mike_andreuzza"
           class="p-3 text-sm text-slate-400 transition duration-500 ease-in-out transform hover:text-white">
           <span class=""> @Mike_Andreuzza</span>
         </a>
