👌 IMPROVE: first version

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -14,7 +14,7 @@
         <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
           <a
             class="items-center justify-center font-medium rounded-xl text-black focus-visible:outline-white focus:outline-none inline-flex bg-white border-2 border-white duration-200 focus-visible:ring-black hover:bg-transparent hover:border-white hover:text-white lg:w-auto px-6 py-3 text-center w-full"
-            href="https://lexingtonthemes.com/">
+            href="https://calendly.com/degass/30min">
             Demander une démo
           </a>
         </div>
