--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -8,10 +8,41 @@
           Questions fréquentes
         </p>
         <p class="text-slate-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-          Contactez moi pour plus de détails
+          Vous trouverez ici les réponses aux questions les plus posées.        
         </p>
       </div>
       <div class="mt-12 space-y-12 divide-y-2">
+        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              Comment fonctionne Degass ?
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-slate-500 text-sm">
+              Degass est une application web permettant de gérer les événements d’une école.
+              <br>
+              <br>
+              Chaque élève dispose d’un accès à Degass. Cependant certains élèves font partie d’un club, en tant que membre, responsable ou chef.
+              <br>
+              Degass se base sur cette hiérarchie pour attribuer des accès différents à l’administration.
+              <br>
+              Par exemple, un membre pourra voir les détails d’un événement, y inscrire des élèves mais ne pourra ni le modifier ni le supprimer.
+              <br>
+              Un responsable pourra créer des événements et les modifier. 
+              <br>
+              Tandis que le chef a un accès total à la gestion des événements mais aussi de son club.
+              <br>
+              Enfin, le chef du BDE a le contrôle sur tous les clubs et leurs événements.
+              <br>
+              <br>
+              Voici un schéma récapitulatif :
+              <img src="hierarchie.png" alt="hierarchie" class="w-1/2 mx-auto">
+
+            </p>
+          </div>
+        </div>
         <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
@@ -21,7 +52,21 @@
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
+              Tous types d'évenements peuvent être organisés avec Degass (soirée, repas, événement sportif, conférence...).
+              <br>
+              Voici quelques exemples :
+              <br>
+              <ul class="text-slate-500 text-sm">
+                <li>- pour une soirée : gestion des navettes aller et retour, envoi de mail récapitulatif à l’achat d’une place
+                </li>
+                <li>- pour un repas : possibilité de créer plusieurs options d’achat (repas seul, repas + boisson, repas + dessert + boisson)
+                </li>
+                <li>- pour une conférence : toute la partie paiement disparaît
+                </li>
+              </ul>
+              <span class="text-slate-500 text-sm">
+                Avec les options citées ci-dessus, on peut imaginer d’autres événements comme une tombola, une après-midi karting ou encore un forum école-entreprise !
+              </span>
             </p>
           </div>
         </div>
@@ -34,11 +79,20 @@
           </div>
           <div class="space-y-4 lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
+              L'arrivée de Degass dans votre école se fait en 3 étapes :
             </p>
-            <p class="text-slate-500 text-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. 
-            </p>
+            <ul class="text-slate-500 text-sm">
+              <li>
+                1. Envoi d’un mail à tous les élèves, permettant de s’inscrire sur Degass (avec le mail ISEN) et d’autoriser la gestion de leur donnée
+              </li>
+              <li>
+                2. Formation avec le chef du BDE ou avec tous les chefs de clubs
+              </li>
+              <li>
+                3. Création du premier événement, l’année peut commencer !
+              </li>
+            </ul>
+              </p>
           </div>
         </div>
         <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
@@ -50,7 +104,7 @@
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
+              Les données des étudiants sont protégées par la RGPD (Règlement Général sur la Protection des Données). Degass ne peut pas utiliser les données des étudiants à des fins commerciales.
             </p>
           </div>
         </div>
@@ -63,7 +117,7 @@
           </div>
           <div class="lg:col-span-2">
             <p class="text-slate-500 text-sm">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis varius metus. Ut eleifend, mauris nec dapibus malesuada, sapien libero aliquet est, quis sagittis ligula nisi et elit. Pellentesque non neque auctor, molestie nulla nec, congue turpis. Ut consectetur, sem ut mattis ornare, mi nunc faucibus mauris, eu pharetra nibh turpis quis felis. Aenean ac finibus turpis. Donec at efficitur leo. Praesent libero risus, facilisis vel tempor ac, tempor eu augue.
+              N'hésitez pas à me contacter par mail à l'adresse suivante : <a href="mailto:savarypierre@yahoo.fr" class="text-blue-500">savarypierre@yahoo.fr</a>
             </p>
           </div>
         </div>
