--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -17,7 +17,7 @@
 		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
 			<h3 class="mt-5 text-lg text-black font-display">Very small</h3>
 			<p class="mt-2 text-sm text-slate-500">
-			Parfait pour les associations avec moins de 50 membres.
+			Parfait pour les <b>associations</b> avec moins de 50 membres.
 			</p>
 			<p
 			class="order-first text-5xl font-light tracking-tight text-black font-display"
@@ -63,13 +63,14 @@
 			</ul>
 			<a
 			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
-			href="#">Obtenir une offre</a
-			>
+			href="mailto:savarypierre@yahoo.fr?subject=Demande%20de%20devis%20pour%20Degass&body=Bonjour%2C%0A%0AJe%20souhaiterais%20obtenir%20un%20devis%20pour%20votre%20outil%20de%20gestion%20et%20d%27organisations%20d%27évènement%20Degass%20pour%20notre%20école%20supérieure.%20%0ANous%20serions%20intéressé%20par%20le%20package%20“Very%20small”.%0A%0APourriez-vous%20m%27envoyer%20plus%20d%27informations%20à%20ce%20sujet%20%3F%0A%0AMerci%20d%27avance%2C%0A%0A%5BVotre%20Nom%5D">
+			Obtenir un devis</a>
+			
 		</section>
 		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
 			<h3 class="mt-5 text-lg text-black font-display">Small</h3>
 			<p class="mt-2 text-sm text-slate-500">
-			Idéal pour les associations avec plus de 50 membres.
+			Idéal pour les <b>associations</b> avec plus de 50 membres.
 			</p>
 			<p
 			class="order-first text-5xl font-light tracking-tight text-black font-display"
@@ -115,13 +116,13 @@
 			</ul>
 			<a
 			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
-			href="#">Obtenir une offre</a
-			>
+			href="mailto:savarypierre@yahoo.fr?subject=Demande%20de%20devis%20pour%20Degass&body=Bonjour%2C%0A%0AJe%20souhaiterais%20obtenir%20un%20devis%20pour%20votre%20outil%20de%20gestion%20et%20d%27organisations%20d%27évènement%20Degass%20pour%20notre%20école%20supérieure.%20%0ANous%20serions%20intéressé%20par%20le%20package%20“Small”.%0A%0APourriez-vous%20m%27envoyer%20plus%20d%27informations%20à%20ce%20sujet%20%3F%0A%0AMerci%20d%27avance%2C%0A%0A%5BVotre%20Nom%5D">
+			Obtenir un devis</a>
 		</section>
 		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
 			<h3 class="mt-5 text-lg text-black font-display">Normal</h3>
 			<p class="mt-2 text-sm text-slate-500">
-			Parfait pour les écoles avec moins de 500 étudiants.
+			Parfait pour les <b>écoles</b> avec moins de 500 étudiants.
 			</p>
 			<p
 			class="order-first text-5xl font-light tracking-tight text-black font-display"
@@ -176,13 +177,13 @@
 			</ul>
 			<a
 			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
-			href="#">Obtenir une offre</a
-			>
+			href="mailto:savarypierre@yahoo.fr?subject=Demande%20de%20devis%20pour%20Degass&body=Bonjour%2C%0A%0AJe%20souhaiterais%20obtenir%20un%20devis%20pour%20votre%20outil%20de%20gestion%20et%20d%27organisations%20d%27évènement%20Degass%20pour%20notre%20école%20supérieure.%20%0ANous%20serions%20intéressé%20par%20le%20package%20“Normal”.%0A%0APourriez-vous%20m%27envoyer%20plus%20d%27informations%20à%20ce%20sujet%20%3F%0A%0AMerci%20d%27avance%2C%0A%0A%5BVotre%20Nom%5D">
+			Obtenir un devis</a>
 		</section>
 		<section class="flex flex-col px-6 rounded-3xl lg:py-8">
 			<h3 class="mt-5 text-lg text-black font-display">Large</h3>
 			<p class="mt-2 text-sm text-slate-500">
-			Idéal pour les écoles avec plus de 500 étudiants.
+			Idéal pour les <b>écoles</b> avec plus de 500 étudiants.
 			</p>
 			<p
 			class="order-first text-5xl font-light tracking-tight text-black font-display"
@@ -237,8 +238,8 @@
 			</ul>
 			<a
 			class="inline-flex items-center justify-center w-full px-6 py-3 mt-8 text-center text-black transition duration-200 ease-in-out transform border-2 border-black hover:bg-transparent hover:text-black focus:ring-2 focus:ring-offset-2 focus:ring-offset-black focus:ring-black focus:outline-none rounded-3xl"
-			href="#">Obtenir une offre</a
-			>
+			href="mailto:savarypierre@yahoo.fr?subject=Demande%20de%20devis%20pour%20Degass&body=Bonjour%2C%0A%0AJe%20souhaiterais%20obtenir%20un%20devis%20pour%20votre%20outil%20de%20gestion%20et%20d%27organisations%20d%27évènement%20Degass%20pour%20notre%20école%20supérieure.%20%0ANous%20serions%20intéressé%20par%20le%20package%20“Large”.%0A%0APourriez-vous%20m%27envoyer%20plus%20d%27informations%20à%20ce%20sujet%20%3F%0A%0AMerci%20d%27avance%2C%0A%0A%5BVotre%20Nom%5D">
+			Obtenir un devis</a>
 		</section>
 		</div>
 	</div>
