--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -67,7 +67,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="https://images.unsplash.com/photo-1577202214328-c04b77cefb5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80"
+                    src="/testimonials/guillaume.jpg"
                     width="56"
                     height="56"
                     decoding="async"
@@ -122,7 +122,7 @@
             <figure class="relative h-full p-6 bg-white rounded-3xl">
               <blockquote class="relative">
                 <p class="text-base text-slate-500">
-                  yessss
+                  En tant que président du Bureau des Sports, Degass nous as permis d'organiser plus d'évenements que jamais. C'est un outil indispensable pour nous !
                 </p>
               </blockquote>
               <figcaption
@@ -137,7 +137,7 @@
                 <div class="overflow-hidden rounded-full bg-slate-50">
                   <img
                     alt=""
-                    src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=989&q=80"
+                    src="/testimonials/matteo.jpeg"
                     width="56"
                     height="56"
                     decoding="async"
