--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -15,11 +15,11 @@
       <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-          href="https://github.com/michael-andreuzza/astrosaas">En savoir plus</a
+          href="#features">En savoir plus</a
         >
         <a
           class="items-center justify-center font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-          href="https://lexingtonthemes.com"
+          href="https://calendly.com/degass/30min"
           >Demander une démo. &nbsp; &rarr;
         </a>
       </div>
